--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -46,11 +46,11 @@
             "justMyCode": true,
         },
         {
-            "name": "my_package test_cli",
+            "name": "axtreme test_cli",
             "type": "debugpy",
             "request": "launch",
             "cwd": "${workspaceFolder}\\tests",
-            "program": "${workspaceFolder}\\src\\my_package\\cli\\my_package.py",
+            "program": "${workspaceFolder}\\src\\axtreme\\cli\\axtreme.py",
             "args": [
                 "test_config_file",
                 "--run",
