--- a/.sourcery.yaml
+++ b/.sourcery.yaml
@@ -18,17 +18,21 @@ ignore: # A list of paths or files which Sourcery will ignore.
   - dist
   - __pycache__
   - docs/build
+  - explorations
 
 rule_settings:
   enable:
     - default
   disable: # A list of rule IDs Sourcery will never suggest.
     - inline-immediately-returned-variable
+    - extract-method
+    - extract-duplicate-method
+    - low-code-quality
   rule_types:
     - refactoring
     - suggestion
     - comment
-  python_version: '3.10' # A string specifying the lowest Python version your project supports. Sourcery will not suggest refactorings requiring a higher Python version.
+  python_version: '3.11' # A string specifying the lowest Python version your project supports. Sourcery will not suggest refactorings requiring a higher Python version.
 
 # rules:  # A list of custom rules Sourcery will include in its analysis.
 # - id: no-print-statements
