.github/workflows/_test.yml : added option -m "not system" to the pytest call, in order to skip the long running tests.

--- a/.github/workflows/_test.yml
+++ b/.github/workflows/_test.yml
@@ -33,4 +33,4 @@ jobs:
           uv pip install pytest
           uv pip install pytest-cov
       - name: Run pytest
-        run: uv run pytest --cov
+        run: uv run pytest --cov -m "not system"
