--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,18 +3,19 @@ repos:
     rev: v5.0.0
     hooks:
       - id: mixed-line-ending
-        fix: auto
+        args: [--fix=auto]
       - id: trailing-whitespace
       - id: check-yaml
       - id: check-toml
       - id: check-merge-conflict
   - repo: https://github.com/astral-sh/ruff-pre-commit
-    rev: v0.8.2
+    rev: v0.8.3
     hooks:
-      - id: ruff
       - id: ruff-format
+      - id: ruff
   - repo: https://github.com/pre-commit/mirrors-mypy
     rev: v1.13.0
     hooks:
       - id: mypy
         additional_dependencies: [numpy==1.26.4, torch==2.4.1]
+exclude: '(.venv|.*_cache)/.*'
