--- a/pytest.ini
+++ b/pytest.ini
@@ -1,7 +1,7 @@
 [pytest]
 testpaths =
     tests
-addopts = --strict-markers --verbose
+addopts = --strict-markers --verbose --durations=10
 xfail_strict = True
 filterwarnings =
   # Filter out parameters and sklearn deprecation warnings.
