--- a/.github/workflows/_test_future.yml
+++ b/.github/workflows/_test_future.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Install uv
         uses: astral-sh/setup-uv@v5
         with:
-          enable-cache: true
+          enable-cache: false
           cache-dependency-glob: "uv.lock"
       - name: Install Python ${{ matrix.python.version }}
         uses: actions/setup-python@v5
