pyproject.toml : switched back to "numpy>=1.26, <2.0" as ax-platform 0.3.7 breaks with numpy 2.x

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -59,7 +59,7 @@ classifiers = [
     "Topic :: Software Development :: Libraries :: Python Modules",
 ]
 dependencies = [
-    "numpy>=1.26",
+    "numpy>=1.26, <2.0",
     "matplotlib>=3.10",
     "statsmodels>=0.14.4",
     "filterpy>=1.4.5",
