--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -14,6 +14,8 @@
         "ms-toolsai.jupyter",
         "ms-toolsai.jupyter-renderers",
         "ms-python.mypy-type-checker",
+        "streetsidesoftware.code-spell-checker",
+        "streetsidesoftware.code-spell-checker-british-english"
     ],
     // List of extensions recommended by VS Code that should not be recommended for users of this workspace.
     "unwantedRecommendations": []
