--- a/pyproject.toml
+++ b/pyproject.toml
@@ -90,7 +90,8 @@ dev = [
     "ruff>=0.11.2",
     "pyright>=1.1.398",
     "mypy>=1.15",
-    "sourcery>=1.31",
+    # TODO(ak25-12-08): Version 1.41 of sourcery has issues with wheels for windows and ubuntu
+    "sourcery>=1.31,<=1.39.0",
     "pre-commit>=4.0",
     "seaborn>=0.13.2",
     "Sphinx>=8.1",
