--- a/pyproject.toml
+++ b/pyproject.toml
@@ -71,9 +71,13 @@ dependencies = [
 ]
 
 [project.optional-dependencies]
-cuda = [
-    "torch==2.4.1+cu124",
+cpu = [
+    "torch==2.4.1",
 ]
+cuda = [
+    "torch==2.4.1",
+]
+
 
 [project.urls]
 Homepage = "https://github.com/dnv-opensource/axtreme"
@@ -106,13 +110,30 @@ dev = [
 ]
 
 [tool.uv]
-default-groups = [
-    "dev",
-]
-find-links = [
-    "https://download.pytorch.org/whl/torch",
-]
+default-groups = ["dev"]
 native-tls = true
+conflicts = [
+    [
+        { extra = "cpu" },
+        { extra = "cuda" },
+    ],
+]
+
+[tool.uv.sources]
+torch = [
+    { index = "pytorch-cpu", extra = "cpu" },
+    { index = "pytorch-cu124", extra = "cuda" },
+]
+
+[[tool.uv.index]]
+name = "pytorch-cpu"
+url = "https://download.pytorch.org/whl/cpu"
+explicit = true
+
+[[tool.uv.index]]
+name = "pytorch-cu124"
+url = "https://download.pytorch.org/whl/cu124"
+explicit = true
 
 
 [tool.mypy]
