--- a/pyproject.toml
+++ b/pyproject.toml
@@ -74,7 +74,9 @@ dependencies = [
 cuda = [
     "torch==2.4.1",
 ]
-
+examples = [
+    "numba==0.61.2"
+]
 
 [project.urls]
 Homepage = "https://github.com/dnv-opensource/axtreme"
